# LaboratoryWork_sgugit

./: CMakeLists.txt  calculationsecond.cpp  calculationsecond.h  calculationsecond.ui  calculationthird.cpp  calculationthird.h  calculationthird.ui  chooseoption.cpp  chooseoption.h  chooseoption.ui  icon.icns  information.cpp  information.h  information.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  option.cpp  option.h
